test/corpus/comments.txt
==================
Comments
==================
# comment
interface# comment
a.b #comment

---
(interface
  (comment)
  (interface_declaration
    (keyword_interface)
    (comment)
    (interface_name))
  (comment))
