test/corpus/full.txt
==================
Full example
==================
# comment
interface tld.sub

type MyType (a)

method MyMethod () -> (
    t: T,
    b: bool,
    i: int,
    f: float,
    s: string,
    o: object,
    y: any,
    d: [string]int,
    a: ?[]()
)

error MyError ()

---
(interface
  (comment)
  (interface_declaration
    (keyword_interface)
    (interface_name))
  (declaration
    (typedef
      (keyword_type)
      (typedef_name
        (name))
      (enum
        (enum_member_name))))
  (declaration
    (method
      (keyword_method)
      (method_name
        (name))
      (struct)
      (arrow)
      (struct
        (struct_field
          (struct_field_name)
          (type
            (typeref
              (name))))
        (struct_field
          (struct_field_name)
          (type
            (bool)))
        (struct_field
          (struct_field_name)
          (type
            (int)))
        (struct_field
          (struct_field_name)
          (type
            (float)))
        (struct_field
          (struct_field_name)
          (type
            (string)))
        (struct_field
          (struct_field_name)
          (type
            (object)))
        (struct_field
          (struct_field_name)
          (type
            (any)))
        (struct_field
          (struct_field_name)
          (type
            (dict
              (string)
              (type
                (int)))))
        (struct_field
          (struct_field_name)
          (type
            (maybe
              (questionmark)
              (type
                (array
                  (type
                    (struct))))))))))
  (declaration
    (error
      (keyword_error)
      (error_name
       (name))
      (struct))))
