test/corpus/whitespace.txt
==================
Missing newline
==================
interface a.b
type A (a)
---
(interface
  (interface_declaration
    (keyword_interface)
    (interface_name))
  (declaration
    (typedef
      (keyword_type)
      (typedef_name
        (name))
      (enum
        (enum_member_name)))))

==================
Missing separator
:error
==================
interfacea.b

---

==================
Excess whitespace
==================
interface a.b
type A (x: ? int, y: [] string, z: [string] string)

---
(interface
  (interface_declaration
    (keyword_interface)
    (interface_name))
  (declaration
    (typedef
      (keyword_type)
      (typedef_name
        (name))
      (struct
        (struct_field
          (struct_field_name)
          (type
            (maybe
              (questionmark)
              (ERROR)
              (type
                (int)))))
        (struct_field
          (struct_field_name)
          (type
            (array
              (ERROR)
              (type
                  (string)))))
        (struct_field
          (struct_field_name)
          (type
            (dict
              (string)
              (ERROR)
              (type
                (string)))))))))
